--- a/notebooks/Paul_Gender.ipynb
+++ b/notebooks/Paul_Gender.ipynb
@@ -1862,8 +1862,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c4caef07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "img_data = np.random.random(size=(100, 100, 3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f7954c0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[0.94570168, 0.12647956, 0.34470814],\n",
+       "        [0.32567551, 0.11841883, 0.87121526],\n",
+       "        [0.7989507 , 0.24386114, 0.95853843],\n",
+       "        ...,\n",
+       "        [0.08250713, 0.86708463, 0.94923958],\n",
+       "        [0.99517091, 0.83487168, 0.8076749 ],\n",
+       "        [0.46098511, 0.66212402, 0.55715906]],\n",
+       "\n",
+       "       [[0.43816713, 0.35874297, 0.15460663],\n",
+       "        [0.32721062, 0.7379721 , 0.78463018],\n",
+       "        [0.08048882, 0.18704429, 0.42346052],\n",
+       "        ...,\n",
+       "        [0.67215344, 0.63011897, 0.01967939],\n",
+       "        [0.19257231, 0.91234205, 0.09957105],\n",
+       "        [0.78145401, 0.03757576, 0.4701928 ]],\n",
+       "\n",
+       "       [[0.2712398 , 0.88078526, 0.58275564],\n",
+       "        [0.22384683, 0.99931182, 0.08600411],\n",
+       "        [0.42110882, 0.14845079, 0.86378432],\n",
+       "        ...,\n",
+       "        [0.05482018, 0.20256232, 0.0827833 ],\n",
+       "        [0.17859388, 0.4559895 , 0.84596478],\n",
+       "        [0.78863047, 0.51642657, 0.69658157]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[0.60752582, 0.40511679, 0.26077661],\n",
+       "        [0.68590861, 0.71233196, 0.93749568],\n",
+       "        [0.60767995, 0.0255314 , 0.5918011 ],\n",
+       "        ...,\n",
+       "        [0.94179404, 0.62635299, 0.76337552],\n",
+       "        [0.9247946 , 0.00210573, 0.41889934],\n",
+       "        [0.61698834, 0.80147933, 0.28885543]],\n",
+       "\n",
+       "       [[0.93286831, 0.12068393, 0.42911852],\n",
+       "        [0.41472271, 0.45360975, 0.94199289],\n",
+       "        [0.83189805, 0.80752635, 0.60747482],\n",
+       "        ...,\n",
+       "        [0.60802898, 0.30898578, 0.16560296],\n",
+       "        [0.49756691, 0.62426578, 0.70616187],\n",
+       "        [0.14538057, 0.46282301, 0.90281961]],\n",
+       "\n",
+       "       [[0.67170049, 0.18989674, 0.5921139 ],\n",
+       "        [0.71946804, 0.51526106, 0.46043862],\n",
+       "        [0.03483945, 0.32273959, 0.68799522],\n",
+       "        ...,\n",
+       "        [0.17807582, 0.14935422, 0.69481249],\n",
+       "        [0.82813049, 0.00682406, 0.54319143],\n",
+       "        [0.3857699 , 0.26530951, 0.10176742]]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14a9f602",
    "metadata": {},
    "outputs": [],
    "source": []
